# caksa-gcs

./: .gitignore  README.md  index.html  package-lock.json  package.json
python-sidecar/: caksa-backend.spec  main.py  requirements.txt
src/: App.tsx  gcs-frontend.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
